FEComponentTransfer cleanup and optimization https://bugs.webkit.org/show_bug.cgi?id=179952

Reviewed by Darin Adler.

Change terminology for FEComponentTransfer to be more explicit about the fact
that it's creating and using lookup tables. Use std::array for the lookup tables.

Use uint8_t instead of unsigned char.

Avoid confusing arrays for channels in computeLookupTables; just setup the lut for
each channel manually.

This is about 1.25x faster than before.

* platform/graphics/filters/FEComponentTransfer.cpp:
(WebCore::FEComponentTransfer::computeIdentityTable):
(WebCore::FEComponentTransfer::computeTabularTable):
(WebCore::FEComponentTransfer::computeDiscreteTable):
(WebCore::FEComponentTransfer::computeLinearTable):
(WebCore::FEComponentTransfer::computeGammaTable):
(WebCore::FEComponentTransfer::platformApplySoftware):
(WebCore::FEComponentTransfer::computeLookupTables):
(WebCore::operator<<):
(WebCore::identity): Deleted.
(WebCore::table): Deleted.
(WebCore::discrete): Deleted.
(WebCore::linear): Deleted.
(WebCore::gamma): Deleted.
(WebCore::FEComponentTransfer::getValues): Deleted.
* platform/graphics/filters/FEComponentTransfer.h:
(WebCore::ComponentTransferFunction::ComponentTransferFunction): Deleted.

Canonical link: https://commits.webkit.org/195975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225107 268f45cc-cd09-0410-ab3c-d52691b4dbfc